--- a/index.html
+++ b/index.html
@@ -16,10 +16,22 @@
     </ul>
   </header>
   <div class="project">
-    <h2 class="project-title"> <a href="">Project #1</a></h2>
-    <p>This project is something I made in October. It does...</p>
+    <h2 class="project-title"> <a href="https://popcode.org/?gist=06752bde68f8013ccafa8510da790730">Project Branding</a></h2>
+    <p>This project is something I made in October 17th, 2016. It was a practice at designing a brand of another student named Johnson. He told me he liked nightcore and wanted to be an engineer. Using that, basic information he gave me, and the CSS I knew, I created this funny brand website.</p>
     <button>Like</button>
-    <p id="like"></p>
+    <p class="like"></p>
+  </div>
+  <div class="project">
+    <h2 class="project-title"> <a href="https://popcode.org/?gist=6a4236517e5dae6d0c28f3858e9e0fd7">Project List Practice</a></h2>
+    <p>This project is something I made in October 19th, 2016. It was a practice at using the list tags. It makes good use of CSS and tags to make a good looking list.</p>
+    <button>Like</button>
+    <p class="like"></p>
+  </div>
+  <div class="project">
+    <h2 class="project-title"> <a href="">Project </a></h2>
+    <p>This project is something I made in </p>
+    <button>Like</button>
+    <p class="like"></p>
   </div>
 
 </body>
