--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <img id="profile" src="images/scripted_logo_orange.png">
     <h1>ScriptEd's Porfolio</h1>
     <ul>
-      <li><a class="nav" href="">Home</a></li>
-      <li><a class="nav" href="">About</a></li>
-      <li><a class="nav" href="">Contact</a></li>
+      <li><a class="nav" href="/index.html">Home</a></li>
+      <li><a class="nav" href="pages/about.html">About</a></li>
+      <li><a class="nav" href="pages/contact.html">Contact</a></li>
     </ul>
   </header>
   <div class="project">
